--- a/index.html
+++ b/index.html
@@ -8,6 +8,121 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1>hello</h1>
+		<div class="navbar">
+			<h5>Company name</h5>
+			<ul>
+				<li>Features</li>
+				<li>Enterprise</li>
+				<li>Support</li>
+				<li>Pricing</li>
+			</ul>
+			<button>Sign up</button>
+		</div>
+
+		<div class="pricing-header">
+			<h1>Pricing</h1>
+			<p>
+				Quickly build an effective pricing table for your potential customers
+				with this Bootstrap example. It's built with default Bootstrap
+				components and utilities with little customization.
+			</p>
+		</div>
+
+		<div class="container">
+			<div class="card-container">
+				<div class="card">
+					<div class="card-header">
+						<h4>Free</h4>
+					</div>
+					<div class="card-body">
+						<h1>$0<span>/mo</span></h1>
+						<ul>
+							<li>10 users included</li>
+							<li>2 GB of storage</li>
+							<li>Email support</li>
+							<li>Help center access</li>
+						</ul>
+						<button>Sign up for free</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="card-container">
+				<div class="card">
+					<div class="card-header">
+						<h4>Pro</h4>
+					</div>
+					<div class="card-body">
+						<h1>$15<span>/mo</span></h1>
+						<ul>
+							<li>20 users included</li>
+							<li>10 GB of storage</li>
+							<li>Priority email support</li>
+							<li>Help center access</li>
+						</ul>
+						<button>Get started</button>
+					</div>
+				</div>
+			</div>
+
+			<div class="card-container">
+				<div class="card">
+					<div class="card-header">
+						<h4>Free</h4>
+					</div>
+					<div class="card-body">
+						<h1>$29<span>/mo</span></h1>
+						<ul>
+							<li>30 users included</li>
+							<li>15 GB of storage</li>
+							<li>Phone and email support</li>
+							<li>Help center access</li>
+						</ul>
+						<button>Contact us</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<footer>
+			<div class="row">
+				<div class="col">
+					<img
+						src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg"
+						alt=""
+					/>
+					<p>© 2017-2018</p>
+				</div>
+				<div class="col">
+					<h5>Features</h5>
+					<ul>
+						<li>Cool stuff</li>
+						<li>Random feature</li>
+						<li>Team feature</li>
+						<li>Stuff for developers</li>
+						<li>Another one</li>
+						<li>Last time</li>
+					</ul>
+				</div>
+				<div class="col">
+					<h5>Resources</h5>
+					<ul>
+						<li>Resource</li>
+						<li>Resource name</li>
+						<li>Another resource</li>
+						<li>Final resource</li>
+					</ul>
+				</div>
+				<div class="col">
+					<h5>About</h5>
+					<ul>
+						<li>Team</li>
+						<li>Locations</li>
+						<li>Privacy</li>
+						<li>Terms</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
