--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 	<body>
 		<div class="navbar">
 			<h5>Company name</h5>
-			<ul>
-				<li>Features</li>
-				<li>Enterprise</li>
-				<li>Support</li>
-				<li>Pricing</li>
-			</ul>
-			<button>Sign up</button>
+			<div class="nav-links">
+				<ul>
+					<li><a href="#">Features</a></li>
+					<li><a href="#">Enterprise</a></li>
+					<li><a href="#">Support</a></li>
+					<li><a href="#">Pricing</a></li>
+				</ul>
+				<button>Sign up</button>
+			</div>
 		</div>
 
 		<div class="pricing-header">
